--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         #pdf-viewer {
             width: 100%;
             height: 100vh;
+            border: none;
         }
     </style>
 </head>
@@ -26,20 +27,21 @@
             const urlParams = new URLSearchParams(queryString);
             const pdfLink = urlParams.get('pdf');
 
-            // If a valid PDF link is provided, embed it using the object tag
+            // If a valid PDF link is provided, embed it in the iframe
             if (pdfLink && pdfLink.endsWith('.pdf')) {
-                const pdfViewer = document.createElement('object');
-                pdfViewer.type = 'application/pdf';
-                pdfViewer.data = pdfLink;
-                pdfViewer.width = '100%';
-                pdfViewer.height = '100%';
-                pdfViewer.id = 'pdf-viewer';
-                document.body.appendChild(pdfViewer);
+                const iframe = document.createElement('iframe');
+                iframe.src = `https://docs.google.com/viewer?url=${encodeURIComponent(pdfLink)}&embedded=true`;
+                iframe.id = 'pdf-viewer';
+                document.body.appendChild(iframe);
             } else {
                 // Display a message if the PDF link is not provided or invalid
                 document.body.innerHTML = '<h2>Please provide a valid PDF link in the query string.</h2>';
             }
         });
+    </script>
+</body>
+</html>
+
     </script>
 </body>
 </html>
