--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <iframe src="https://drive.google.com/file/d/1pgOtbMwX4MueZGRkEWZd2JvtaelKnMh4/preview" width="640" height="480" allow="autoplay"></iframe>
+    <iframe src="https://drive.google.com/file/d/1pgOtbMwX4MueZGRkEWZd2JvtaelKnMh4/preview" width="100%" style="min-height:90vh;" allow="autoplay"></iframe>
       <h1 class="title">Hello World! </h1>
       <p id="currentTime"></p>
       <script src="script.js"></script>
